# agentic-ai-basic-chatbot

./: .gitignore  1-basicchatbot.ipynb  README.md  pyproject.toml  requirements.txt
.github/workflows/: demo.yml
