[project]
name = "basicchatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langchain-tavily>=0.2.10",
    "langgraph>=0.5.4",
    "langsmith>=0.4.8",
    "python-dotenv>=1.1.1",
]
